--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.thymeleaf.check-template-location=false
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+
+spring.mail.host=smtp-mail.outlook.com
+spring.mail.port=587
+spring.mail.username=levysonic@hotmail.com
+spring.mail.password=d*211712
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
